--- a/values.yaml
+++ b/values.yaml
@@ -5,7 +5,7 @@ app:
 
 git:
   branch: master
-  repo: {{ gitea_customize_gitea_endpoint }}/{{ gitea_customize_lab_username }}/env-gitops.git
+  repo: https://{{ gitea_customize_gitea_endpoint }}/gitea/{{ gitea_customize_lab_username }}-env-gitops.git
   org: development
   name: env-gitops
   host: {{ gitea_customize_gitea_endpoint }}
