--- a/templates/job-setup-sonarqube.yaml
+++ b/templates/job-setup-sonarqube.yaml
@@ -27,7 +27,7 @@ spec:
                 key: password
                 name: common-password-secret
           - name: SONARQUBE_URL
-            value: https://sonarqube-sonarqube{{ .Values.app.cluster }}
+            value: https://sonarqube-sonarqube.{{ .Values.app.cluster }}
       restartPolicy: Never
       volumes:
       - name: {{ .Values.app.name }}-script-vol
