--- a/templates/rolebinding-promote.yaml
+++ b/templates/rolebinding-promote.yaml
@@ -5,7 +5,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: image-pusher
-    namespace: customers-user1
+    namespace: {{ .Values.app.name }}-{{ .Values.lab.username }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
