--- a/templates/rolebinding.yaml
+++ b/templates/rolebinding.yaml
@@ -1,11 +1,11 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: user1-ns-rolebinding
+  name: {{ .Values.lab.username }}-ns-rolebinding
 subjects:
   - apiGroup: rbac.authorization.k8s.io
     kind: User
-    name: user1
+    name: {{ .Values.lab.username }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
