--- a/templates/triggerbinding-commit.yaml
+++ b/templates/triggerbinding-commit.yaml
@@ -5,8 +5,6 @@ metadata:
 spec:
   params:
     - name: git-repo-url
-      value: $(body.repository.git_http_url)
+      value: $(body.repository.clone_url)
     - name: git-revision
       value: $(body.after)
-    - name: git-committer
-      value: $(body.user_email)
