--- a/templates/route.yaml
+++ b/templates/route.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/part-of: Triggers
     eventlistener: {{ .Values.app.name }}-el
 spec:
-  host: webhook-{{ .Values.app.name }}{{ .Values.app.cluster }}
+  host: {{ .Values.lab.username }}-webhook-{{ .Values.app.name }}{{ .Values.app.cluster }}
   to:
     kind: Service
     name: el-{{ .Values.app.name }}-el
