--- a/templates/external-secret-clone-credentials.yaml
+++ b/templates/external-secret-clone-credentials.yaml
@@ -5,12 +5,12 @@ metadata:
 spec:
   data:
     - remoteRef:
-        key: secrets/janusidp/gitea/admin
-        property: username
+        key: secrets/janusidp/gitea/username
+        property: value
       secretKey: username
     - remoteRef:
-        key: secrets/janusidp/gitea/admin
-        property: password
+        key: secrets/janusidp/gitea/password
+        property: value
       secretKey: password
   secretStoreRef:
     kind: ClusterSecretStore
